--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ body {
 
 .dot:hover {
    cursor: pointer;
-   background-color: #c8c6c6;
+   background-color: #c9d1d3;
 }
 
 .dot-white:focus {
