--- a/style.css
+++ b/style.css
@@ -52,6 +52,22 @@ body {
     background-color: #eddea1;
 }
 
+.restart-button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: #ffffff;
+    background-color: #7aa8b7;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.restart-button:hover {
+    background-color: #eddea1;
+}
+
 .board-row-top {
    width: 80%;
    margin-left: auto;
