--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
     color: #190934;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+    width: 50%;
+}
+
 .th {
    padding: 30px;
    border: 2px solid black;
